# tropix

./: Cargo.toml  LICENSE  README.md
apps/: bittrexautobuy.rs  bittrexautobuyprice.rs  bittrexautosell.rs  bittrexcli.rs  buy_v_sell_poloniex.rs  poloautobuy.rs  poloautobuyprice.rs  poloautosell.rs
src/: lib.rs
src/bittrex/: bittrex.rs  mod.rs
src/poloniex/: connection.rs  mod.rs  private.rs  public.rs
trader/apps/: bittrexcli.rs
trader/src/: bittrex.rs
